--- a/Src/Space/Components/CreditsView.razor
+++ b/Src/Space/Components/CreditsView.razor
@@ -1,4 +1,9 @@
-﻿<span class="unit">C</span><span class="value @(this.Credits < 0 ? "negative" : string.Empty)">@this.Credits.ToString("n0")</span>
+﻿<span class="unit">
+    C
+</span>
+<span class="value @(this.Credits < 0 ? "negative" : string.Empty)">
+    @this.Credits.ToString("n0")
+</span>
 
 <style>
     .unit {
